crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__addition_pushdown_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&result)?
---
+---+------+-----+
| a | five | six |
+---+------+-----+
| 3 | 8    | 9   |
| 4 | 9    | 10  |
+---+------+-----+
