crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__array_length_case_regex_when_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&regex_result)?
---
+----+
| id |
+----+
| 1  |
| 2  |
| 4  |
| 5  |
+----+
