crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__array_length_filter_pushdown_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&filter_result)?
---
+----+
| id |
+----+
| 2  |
| 4  |
+----+
