crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__array_length_pushdown_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&proj_result)?
---
+----+-------+-------+
| id | len_a | len_b |
+----+-------+-------+
| 1  | 3     | 1     |
| 2  | 4     | 2     |
| 3  | 1     | 3     |
| 4  | 5     | 4     |
| 5  | 2     | 0     |
| 6  |       | 2     |
+----+-------+-------+
