crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__cast_case_else_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: else_fmt
---
+----+
| id |
+----+
| 1  |
| 5  |
+----+
