crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__create_table_ordered_by_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&r)?
---
+---------+------+
| c1      | c2   |
+---------+------+
| air     | 5    |
| alabama | 2000 |
| balloon | 42   |
+---------+------+
