crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__decimal_to_float_cast_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&result)?
---
+------------+
| amount_f64 |
+------------+
| -4.56      |
| 1.23       |
| 100.0      |
|            |
+------------+
