crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__doc_example_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&result)?
---
+---------+-----+
| name    | age |
+---------+-----+
| Alice   | 30  |
| Charlie | 35  |
+---------+-----+
