crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__map_column_roundtrip_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: pretty_format_batches(&batches)?
---
+----+-----------------------------------------------+
| id | headers                                       |
+----+-----------------------------------------------+
| 1  | {content-type: application/json, etag: "abc"} |
| 2  |                                               |
| 3  | {content-type: text/plain}                    |
+----+-----------------------------------------------+
