crates/vortex/src/persistent/snapshots/vortex_datafusion__persistent__tests__not_boolean_filter_result.snap
---
source: crates/vortex/src/persistent/mod.rs
expression: result_fmt
---
+----+
| id |
+----+
| 2  |
| 4  |
+----+
